--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
       <div class="container">
 
-        <!-- ============ DASHBOARD / HOME ============ -->
+        <!-- ===================== DASHBOARD ===================== -->
         <section id="home">
           <!-- KPIs -->
           <div class="section">
@@ -49,46 +49,29 @@
           <!-- Total Stock & Ad Spend by Country -->
           <div class="section">
             <h2>Total Stock &amp; Ad Spend by Country</h2>
-            <table class="table">
-              <thead>
-                <tr><th>Country</th><th>Approx. Stock</th><th>Total Ad Spend (USD)</th></tr>
-              </thead>
-              <tbody id="stockByCountryBody"><!-- rows injected --></tbody>
-              <tfoot>
-                <tr class="totals"><th>Totals</th><th id="stockTotal">0</th><th id="adTotal">0.00</th></tr>
-              </tfoot>
+            <table id="stockByCountryTbl" class="table">
+              <!-- app.js builds thead/tbody/tfoot and totals -->
             </table>
           </div>
 
-          <!-- Weekly Delivered: editable grid Monday–Sunday by country -->
+          <!-- Weekly Delivered grid (Mon–Sun x Countries) -->
           <div class="section">
             <h2>Weekly Delivered (Mon → Sun)</h2>
             <div class="card">
               <div class="row wrap">
-                <button id="weeklyPrev" class="btn outline">◀ Prev week</button>
-                <div class="badge" id="weeklyRange">Week: </div>
-                <button id="weeklyNext" class="btn outline">Next week ▶</button>
-                <button id="weeklySave" class="btn">Save</button>
-                <button id="weeklyReset" class="btn danger outline">Reset</button>
+                <div class="badge">This week grid auto-fills all system countries. Edit cells to set delivered pieces.</div>
+                <button id="wdSave" class="btn">Save</button>
+                <button id="wdReset" class="btn danger outline">Reset</button>
               </div>
-              <small>Tip: the grid shows <b>all countries</b> in the system. Click a cell to edit delivered pieces for that day/country.</small>
             </div>
             <div class="table-scroll">
-              <table class="table compact">
-                <thead id="weeklyHead"><!-- Mon..Sun headers injected --></thead>
-                <tbody id="weeklyBody"><!-- one row per country injected --></tbody>
-                <tfoot>
-                  <tr class="totals"><th>Totals</th>
-                    <th id="wMonT">0</th><th id="wTueT">0</th><th id="wWedT">0</th>
-                    <th id="wThuT">0</th><th id="wFriT">0</th><th id="wSatT">0</th><th id="wSunT">0</th>
-                    <th id="wAllT">0</th>
-                  </tr>
-                </tfoot>
+              <table id="weeklyGrid" class="table compact">
+                <!-- app.js renders headers (Mon..Sun) + rows per country + totals row -->
               </table>
             </div>
           </div>
 
-          <!-- Daily Advertising Spend (replace/upsert) -->
+          <!-- Daily Advertising Spend (replace same product+country+platform) -->
           <div class="section">
             <h2>Daily Advertising Spend</h2>
             <div class="card">
@@ -101,13 +84,13 @@
                 <select id="adProduct" class="input"></select>
                 <select id="adCountry" class="input"></select>
                 <input id="adAmount" type="number" class="input" placeholder="Amount (USD)" min="0" step="0.01"/>
-                <button id="adSave" class="btn">Save/Replace</button>
+                <button id="adAdd" class="btn">Save / Replace</button>
               </div>
-              <small>Same <b>product + platform + country</b> replaces the previous value.</small>
+              <small>Re-saving for the same product + platform + country replaces the previous value.</small>
             </div>
           </div>
 
-          <!-- Stock Movement (Create Shipment) -->
+          <!-- Stock Movement -->
           <div class="section">
             <h2>Stock Movement</h2>
             <div class="card">
@@ -120,29 +103,29 @@
                 <input id="mvShip" type="number" class="input" placeholder="Shipping Cost (USD)" min="0" step="0.01"/>
                 <button id="mvAdd" class="btn">Add Movement</button>
               </div>
-              <small>When marked as arrived, stock will <b>add to destination</b> and <b>deduct from origin</b>.</small>
+              <small>When marked as arrived, stock is added to destination and deducted from origin.</small>
             </div>
           </div>
 
           <!-- Transit China → Kenya -->
           <div class="section">
             <h2>Transit (China → Kenya)</h2>
-            <table class="table" id="shipCK">
-              <thead><tr>
-                <th>ID</th><th>Product</th><th>Route</th><th>Qty</th><th>Ship Cost</th><th>Departed</th><th>Arrived</th><th>Days</th><th>Actions</th>
-              </tr></thead>
-              <tbody id="shipCKBody"><!-- rows --></tbody>
+            <table class="table">
+              <thead>
+                <tr><th>ID</th><th>Product</th><th>Route</th><th>Qty</th><th>Ship Cost</th><th>Departed</th><th>Arrived</th><th>Actions</th></tr>
+              </thead>
+              <tbody id="shipCKBody"><!-- rows via app.js --></tbody>
             </table>
           </div>
 
           <!-- Transit Inter-country -->
           <div class="section">
             <h2>Transit (Inter-country)</h2>
-            <table class="table" id="shipIC">
-              <thead><tr>
-                <th>ID</th><th>Product</th><th>Route</th><th>Qty</th><th>Ship Cost</th><th>Departed</th><th>Arrived</th><th>Days</th><th>Actions</th>
-              </tr></thead>
-              <tbody id="shipICBody"><!-- rows --></tbody>
+            <table class="table">
+              <thead>
+                <tr><th>ID</th><th>Product</th><th>Route</th><th>Qty</th><th>Ship Cost</th><th>Departed</th><th>Arrived</th><th>Actions</th></tr>
+              </thead>
+              <tbody id="shipICBody"><!-- rows via app.js --></tbody>
             </table>
           </div>
 
@@ -155,35 +138,31 @@
               <input id="pcEnd" type="date" class="input"/>
               <button id="pcRun" class="btn">Run</button>
             </div>
-            <table class="table" id="profitCountry">
-              <thead><tr>
-                <th>Country</th><th>Revenue</th><th>Ad Spend</th><th>Delivery Cost</th><th>Pieces</th><th>Profit</th>
-              </tr></thead>
-              <tbody id="profitCountryBody"><!-- rows --></tbody>
-              <tfoot>
-                <tr class="totals">
-                  <th>Totals</th><th id="pcRevT">0</th><th id="pcAdT">0</th><th id="pcDelT">0</th><th id="pcPiecesT">0</th><th id="pcProfitT">0</th>
-                </tr>
-              </tfoot>
+            <table id="profitCountryTable" class="table">
+              <thead>
+                <tr><th>Country</th><th>Revenue</th><th>Ad Spend</th><th>Delivery Cost</th><th>Pieces</th><th>Profit</th></tr>
+              </thead>
+              <tbody><!-- rows via app.js --></tbody>
             </table>
           </div>
 
-          <!-- To-Do + Weekly To-Do -->
+          <!-- To-Do (quick) -->
           <div class="section">
             <h2>To-Do</h2>
             <div class="row">
               <input id="todoText" class="input" placeholder="Task"/>
               <button id="todoAdd" class="btn">Add</button>
             </div>
-            <div id="todoList" class="todo-list"></div>
+            <div id="todoList" class="todo-list"><!-- localStorage based --></div>
           </div>
 
+          <!-- Weekly To-Do -->
           <div class="section">
             <h2>Weekly To-Do</h2>
-            <div id="weeklyWrap" class="weeks"><!-- 7 cards injected --></div>
+            <div id="weeklyWrap" class="weeks"><!-- 7 day cards via app.js --></div>
           </div>
 
-          <!-- Lifetime Product Performance (global table) -->
+          <!-- Lifetime Product Performance (Global) -->
           <div class="section">
             <h2>Lifetime Product Performance</h2>
             <div class="row wrap">
@@ -193,12 +172,13 @@
               <button id="lpRun" class="btn">Run</button>
             </div>
             <table class="table" id="lifetimeTable">
-              <thead><tr>
-                <th>Product</th><th>Country</th><th>Revenue</th><th>Ad Spend</th><th>Shipping</th><th>Base Cost</th><th>Pieces</th><th>Profit</th>
-              </tr></thead>
-              <tbody id="lifetimeBody"><!-- rows --></tbody>
+              <thead>
+                <tr><th>Product</th><th>Country</th><th>Revenue</th><th>Ad Spend</th><th>Shipping</th><th>Base Cost</th><th>Pieces</th><th>Profit</th></tr>
+              </thead>
+              <tbody id="lifetimeBody"><!-- rows via app.js --></tbody>
               <tfoot>
-                <tr class="totals"><th colspan="2">Totals</th>
+                <tr class="totals">
+                  <th colspan="2">Totals</th>
                   <th id="ltRevT">0</th><th id="ltAdT">0</th><th id="ltShipT">0</th><th id="ltBaseT">0</th><th id="ltPiecesT">0</th><th id="ltProfitT">0</th>
                 </tr>
               </tfoot>
@@ -206,7 +186,7 @@
           </div>
         </section>
 
-        <!-- ============ PRODUCTS ============ -->
+        <!-- ===================== PRODUCTS ===================== -->
         <section id="products" style="display:none">
           <h2>Products</h2>
 
@@ -224,13 +204,13 @@
 
           <table id="productsTable" class="table">
             <thead><tr><th>Name</th><th>SKU</th><th>Status</th><th>Actions</th></tr></thead>
-            <tbody><!-- rows injected --></tbody>
+            <tbody><!-- rows via app.js --></tbody>
           </table>
 
-          <small>Open goes to <code>product.html?id=&lt;PRODUCT_ID&gt;</code></small>
+          <small>Open goes to <code>product.html?id=&lt;PRODUCT_ID&gt;</code>.</small>
         </section>
 
-        <!-- ============ PERFORMANCE ============ -->
+        <!-- ===================== PERFORMANCE ===================== -->
         <section id="performance" style="display:none">
           <h2>Performance</h2>
 
@@ -249,10 +229,8 @@
               <button id="pfRun" class="btn">Run</button>
             </div>
             <table id="pfTable" class="table">
-              <thead><tr>
-                <th>Product</th><th>Country</th><th>Pieces</th><th>Ad Spend</th><th>Product Cost</th><th>Total Profit</th><th>Profit / pc</th>
-              </tr></thead>
-              <tbody><!-- rows injected --></tbody>
+              <thead><tr><th>Product</th><th>Pieces</th><th>Ad Spend</th><th>Product Cost</th><th>Total Profit</th><th>Profit / pc</th></tr></thead>
+              <tbody><!-- rows via app.js --></tbody>
             </table>
           </div>
 
@@ -275,17 +253,17 @@
           </div>
         </section>
 
-        <!-- ============ FINANCE ============ -->
+        <!-- ===================== FINANCE ===================== -->
         <section id="finance" style="display:none">
           <h2>Finance</h2>
 
-          <!-- Running Balance (all time) -->
+          <!-- Running Balance -->
           <div class="card big-balance">
             <div class="h">Running Balance (All-time)</div>
-            <div id="runBalance" class="balance">0.00 USD</div>
+            <div id="feRunning" class="balance">0.00 USD</div>
           </div>
 
-          <!-- Manage Categories (add + delete) -->
+          <!-- Categories -->
           <div class="card">
             <div class="h">Categories</div>
             <div class="row wrap">
@@ -299,11 +277,11 @@
             <div class="row cats">
               <div>
                 <h4>Debits</h4>
-                <div id="fcDebits" class="chips"><!-- chips with delete buttons --></div>
+                <div id="fcDebitList" class="chips"></div>
               </div>
               <div>
                 <h4>Credits</h4>
-                <div id="fcCredits" class="chips"><!-- chips with delete buttons --></div>
+                <div id="fcCreditList" class="chips"></div>
               </div>
             </div>
           </div>
@@ -313,10 +291,6 @@
             <div class="h">Entries</div>
             <div class="row wrap">
               <input id="feDate" type="date" class="input"/>
-              <select id="feType" class="input">
-                <option value="debit">Debit</option>
-                <option value="credit">Credit</option>
-              </select>
               <select id="feCat" class="input"></select>
               <input id="feAmt" type="number" class="input" placeholder="Amount (USD)" min="0" step="0.01"/>
               <input id="feNote" class="input" placeholder="Note"/>
@@ -327,35 +301,35 @@
               <input id="fes" type="date" class="input"/>
               <input id="fee" type="date" class="input"/>
               <button id="feRun" class="btn outline">Run</button>
-              <div id="feBalance" class="badge">Period Balance: —</div>
+              <div id="feBalance" class="badge">Balance: —</div>
             </div>
 
             <table id="feTable" class="table">
               <thead><tr><th>Date</th><th>Type</th><th>Category</th><th>Amount</th><th>Note</th><th></th></tr></thead>
-              <tbody><!-- rows injected --></tbody>
+              <tbody><!-- rows via app.js --></tbody>
             </table>
           </div>
         </section>
 
-        <!-- ============ SETTINGS ============ -->
+        <!-- ===================== SETTINGS ===================== -->
         <section id="settings" style="display:none">
           <h2>Settings</h2>
 
-          <!-- Countries add/delete (China locked) -->
+          <!-- Countries -->
           <div class="card">
             <div class="h">Countries</div>
             <div class="row">
               <input id="cty" class="input" placeholder="Add country"/>
               <button id="ctyAdd" class="btn">Add</button>
             </div>
-            <div id="ctyList" class="chips deletable"><!-- chips with delete buttons --></div>
+            <div id="ctyList" class="chips deletable"><!-- chips via app.js --></div>
           </div>
 
           <!-- Edit Product Info -->
           <div class="card">
             <div class="h">Edit Product Info</div>
             <div class="row wrap">
-              <select id="epSelect" class="input"><option value="">Select product…</option></select>
+              <select id="editProdSel" class="input"><option value="">Select product…</option></select>
               <input id="epName" class="input" placeholder="Product name"/>
               <input id="epSku" class="input" placeholder="SKU"/>
               <input id="epCost" type="number" class="input" placeholder="Cost from China (USD)" step="0.01"/>
@@ -369,21 +343,17 @@
           <div class="card">
             <div class="h">Manual Save &amp; Restore</div>
             <div class="row">
-              <input id="snapName" class="input" placeholder="Name this snapshot"/>
-              <button id="snapSave" class="btn">Save current system data</button>
+              <button id="ssSave" class="btn">Save current system data</button>
             </div>
-            <table class="table">
-              <thead><tr><th>Name</th><th>File</th><th>Actions</th></tr></thead>
-              <tbody id="snapList"><!-- rows with Push / Delete buttons --></tbody>
-            </table>
+            <div id="ssList" class="list"><!-- snapshot rows with Push/Delete via app.js --></div>
           </div>
         </section>
 
-      </div><!-- /container -->
-    </div><!-- /main -->
-  </div><!-- /app -->
+      </div><!-- /.container -->
+    </div><!-- /#main -->
+  </div><!-- /#app -->
 
-  <!-- App script at very end to ensure DOM is ready -->
+  <!-- Keep the script tag LAST so the DOM is ready for app.js to bind -->
   <script src="/public/app.js"></script>
   <script src="/public/snapshot.js"></script>
 </body>
