--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
       <div class="container">
 
-        <!-- ===================== DASHBOARD ===================== -->
+        <!-- ============ DASHBOARD / HOME ============ -->
         <section id="home">
           <!-- KPIs -->
           <div class="section">
@@ -46,75 +46,64 @@
             </div>
           </div>
 
-          <!-- Total Stock & Ad Spend by Country -->
+          <!-- Total Stock & Ad Spend by Country (rendered by app.js) -->
           <div class="section">
             <h2>Total Stock &amp; Ad Spend by Country</h2>
-            <table id="stockByCountryTbl" class="table">
-              <!-- app.js builds thead/tbody/tfoot and totals -->
-            </table>
+            <table id="stockByCountryTbl" class="table"><!-- app.js renders thead/tbody/tfoot --></table>
           </div>
 
           <!-- Weekly Delivered grid (Mon–Sun x Countries) -->
           <div class="section">
             <h2>Weekly Delivered (Mon → Sun)</h2>
-            <div class="card">
-              <div class="row wrap">
-                <div class="badge">This week grid auto-fills all system countries. Edit cells to set delivered pieces.</div>
-                <button id="wdSave" class="btn">Save</button>
-                <button id="wdReset" class="btn danger outline">Reset</button>
-              </div>
+            <div class="card row gap">
+              <button id="wdSave" class="btn">Save</button>
+              <button id="wdReset" class="btn outline">Reset</button>
             </div>
             <div class="table-scroll">
-              <table id="weeklyGrid" class="table compact">
-                <!-- app.js renders headers (Mon..Sun) + rows per country + totals row -->
-              </table>
+              <table id="weeklyGrid" class="table compact"><!-- filled by app.js --></table>
             </div>
           </div>
 
-          <!-- Daily Advertising Spend (replace same product+country+platform) -->
+          <!-- Daily Advertising Spend (replace existing) -->
           <div class="section">
             <h2>Daily Advertising Spend</h2>
-            <div class="card">
-              <div class="row wrap">
-                <select id="adPlatform" class="input">
-                  <option value="facebook">Facebook</option>
-                  <option value="tiktok">TikTok</option>
-                  <option value="google">Google</option>
-                </select>
-                <select id="adProduct" class="input"></select>
-                <select id="adCountry" class="input"></select>
-                <input id="adAmount" type="number" class="input" placeholder="Amount (USD)" min="0" step="0.01"/>
-                <button id="adAdd" class="btn">Save / Replace</button>
-              </div>
-              <small>Re-saving for the same product + platform + country replaces the previous value.</small>
+            <div class="card row wrap">
+              <select id="adPlatform" class="input">
+                <option value="facebook">Facebook</option>
+                <option value="tiktok">TikTok</option>
+                <option value="google">Google</option>
+              </select>
+              <select id="adProduct" class="input"></select>
+              <select id="adCountry" class="input"></select>
+              <input id="adAmount" type="number" class="input" placeholder="Amount (USD)" min="0" step="0.01"/>
+              <button id="adAdd" class="btn">Save/Replace</button>
             </div>
+            <small>Saving again for the same <b>product + platform + country</b> replaces the previous value.</small>
           </div>
 
           <!-- Stock Movement -->
           <div class="section">
             <h2>Stock Movement</h2>
-            <div class="card">
-              <div class="row wrap">
-                <select id="mvFrom" class="input"></select>
-                <span>→</span>
-                <select id="mvTo" class="input"></select>
-                <select id="mvProduct" class="input"></select>
-                <input id="mvQty" type="number" class="input" placeholder="Qty" min="0"/>
-                <input id="mvShip" type="number" class="input" placeholder="Shipping Cost (USD)" min="0" step="0.01"/>
-                <button id="mvAdd" class="btn">Add Movement</button>
-              </div>
-              <small>When marked as arrived, stock is added to destination and deducted from origin.</small>
+            <div class="card row wrap">
+              <select id="mvFrom" class="input"></select>
+              <span>→</span>
+              <select id="mvTo" class="input"></select>
+              <select id="mvProduct" class="input"></select>
+              <input id="mvQty" type="number" class="input" placeholder="Qty" min="0"/>
+              <input id="mvShip" type="number" class="input" placeholder="Shipping Cost (USD)" min="0" step="0.01"/>
+              <button id="mvAdd" class="btn">Add Movement</button>
             </div>
+            <small>When marked as <b>Arrived</b>, destination stock increases and origin stock decreases.</small>
           </div>
 
           <!-- Transit China → Kenya -->
           <div class="section">
             <h2>Transit (China → Kenya)</h2>
             <table class="table">
-              <thead>
-                <tr><th>ID</th><th>Product</th><th>Route</th><th>Qty</th><th>Ship Cost</th><th>Departed</th><th>Arrived</th><th>Actions</th></tr>
-              </thead>
-              <tbody id="shipCKBody"><!-- rows via app.js --></tbody>
+              <thead><tr>
+                <th>ID</th><th>Product</th><th>Route</th><th>Qty</th><th>Ship Cost</th><th>Departed</th><th>Arrived</th><th>Days</th><th>Actions</th>
+              </tr></thead>
+              <tbody id="shipCKBody"><!-- rows --></tbody>
             </table>
           </div>
 
@@ -122,10 +111,10 @@
           <div class="section">
             <h2>Transit (Inter-country)</h2>
             <table class="table">
-              <thead>
-                <tr><th>ID</th><th>Product</th><th>Route</th><th>Qty</th><th>Ship Cost</th><th>Departed</th><th>Arrived</th><th>Actions</th></tr>
-              </thead>
-              <tbody id="shipICBody"><!-- rows via app.js --></tbody>
+              <thead><tr>
+                <th>ID</th><th>Product</th><th>Route</th><th>Qty</th><th>Ship Cost</th><th>Departed</th><th>Arrived</th><th>Days</th><th>Actions</th>
+              </tr></thead>
+              <tbody id="shipICBody"><!-- rows --></tbody>
             </table>
           </div>
 
@@ -139,54 +128,31 @@
               <button id="pcRun" class="btn">Run</button>
             </div>
             <table id="profitCountryTable" class="table">
-              <thead>
-                <tr><th>Country</th><th>Revenue</th><th>Ad Spend</th><th>Delivery Cost</th><th>Pieces</th><th>Profit</th></tr>
-              </thead>
-              <tbody><!-- rows via app.js --></tbody>
+              <thead><tr>
+                <th>Country</th><th>Revenue</th><th>Ad Spend</th><th>Delivery Cost</th><th>Pieces</th><th>Profit</th>
+              </tr></thead>
+              <tbody><!-- filled by app.js --></tbody>
             </table>
           </div>
 
-          <!-- To-Do (quick) -->
+          <!-- To-Do -->
           <div class="section">
             <h2>To-Do</h2>
             <div class="row">
               <input id="todoText" class="input" placeholder="Task"/>
               <button id="todoAdd" class="btn">Add</button>
             </div>
-            <div id="todoList" class="todo-list"><!-- localStorage based --></div>
+            <div id="todoList" class="todo-list"></div>
           </div>
 
           <!-- Weekly To-Do -->
           <div class="section">
             <h2>Weekly To-Do</h2>
-            <div id="weeklyWrap" class="weeks"><!-- 7 day cards via app.js --></div>
-          </div>
-
-          <!-- Lifetime Product Performance (Global) -->
-          <div class="section">
-            <h2>Lifetime Product Performance</h2>
-            <div class="row wrap">
-              <select id="lpProduct" class="input"><option value="">All products</option></select>
-              <input id="lpStart" type="date" class="input"/>
-              <input id="lpEnd" type="date" class="input"/>
-              <button id="lpRun" class="btn">Run</button>
-            </div>
-            <table class="table" id="lifetimeTable">
-              <thead>
-                <tr><th>Product</th><th>Country</th><th>Revenue</th><th>Ad Spend</th><th>Shipping</th><th>Base Cost</th><th>Pieces</th><th>Profit</th></tr>
-              </thead>
-              <tbody id="lifetimeBody"><!-- rows via app.js --></tbody>
-              <tfoot>
-                <tr class="totals">
-                  <th colspan="2">Totals</th>
-                  <th id="ltRevT">0</th><th id="ltAdT">0</th><th id="ltShipT">0</th><th id="ltBaseT">0</th><th id="ltPiecesT">0</th><th id="ltProfitT">0</th>
-                </tr>
-              </tfoot>
-            </table>
+            <div id="weeklyWrap" class="weeks"><!-- 7 cards injected --></div>
           </div>
         </section>
 
-        <!-- ===================== PRODUCTS ===================== -->
+        <!-- ============ PRODUCTS ============ -->
         <section id="products" style="display:none">
           <h2>Products</h2>
 
@@ -204,13 +170,13 @@
 
           <table id="productsTable" class="table">
             <thead><tr><th>Name</th><th>SKU</th><th>Status</th><th>Actions</th></tr></thead>
-            <tbody><!-- rows via app.js --></tbody>
+            <tbody><!-- rows injected --></tbody>
           </table>
 
-          <small>Open goes to <code>product.html?id=&lt;PRODUCT_ID&gt;</code>.</small>
+          <small>Click <b>Open</b> to go to that product’s page: <code>product.html?id=&lt;PRODUCT_ID&gt;</code></small>
         </section>
 
-        <!-- ===================== PERFORMANCE ===================== -->
+        <!-- ============ PERFORMANCE ============ -->
         <section id="performance" style="display:none">
           <h2>Performance</h2>
 
@@ -229,8 +195,10 @@
               <button id="pfRun" class="btn">Run</button>
             </div>
             <table id="pfTable" class="table">
-              <thead><tr><th>Product</th><th>Pieces</th><th>Ad Spend</th><th>Product Cost</th><th>Total Profit</th><th>Profit / pc</th></tr></thead>
-              <tbody><!-- rows via app.js --></tbody>
+              <thead><tr>
+                <th>Product</th><th>Pieces</th><th>Ad Spend</th><th>Product Cost</th><th>Total Profit</th><th>Profit / pc</th>
+              </tr></thead>
+              <tbody><!-- rows injected --></tbody>
             </table>
           </div>
 
@@ -253,17 +221,16 @@
           </div>
         </section>
 
-        <!-- ===================== FINANCE ===================== -->
+        <!-- ============ FINANCE ============ -->
         <section id="finance" style="display:none">
           <h2>Finance</h2>
 
-          <!-- Running Balance -->
           <div class="card big-balance">
             <div class="h">Running Balance (All-time)</div>
             <div id="feRunning" class="balance">0.00 USD</div>
           </div>
 
-          <!-- Categories -->
+          <!-- Manage Categories -->
           <div class="card">
             <div class="h">Categories</div>
             <div class="row wrap">
@@ -286,12 +253,12 @@
             </div>
           </div>
 
-          <!-- Entries -->
+          <!-- Entries + Period Filter -->
           <div class="card">
             <div class="h">Entries</div>
             <div class="row wrap">
               <input id="feDate" type="date" class="input"/>
-              <select id="feCat" class="input"></select>
+              <select id="feCat" class="input"><option value="" disabled selected>Select category</option></select>
               <input id="feAmt" type="number" class="input" placeholder="Amount (USD)" min="0" step="0.01"/>
               <input id="feNote" class="input" placeholder="Note"/>
               <button id="feAdd" class="btn">Add Entry</button>
@@ -301,28 +268,28 @@
               <input id="fes" type="date" class="input"/>
               <input id="fee" type="date" class="input"/>
               <button id="feRun" class="btn outline">Run</button>
-              <div id="feBalance" class="badge">Balance: —</div>
+              <div id="feBalance" class="badge">Balance for period: —</div>
             </div>
 
             <table id="feTable" class="table">
               <thead><tr><th>Date</th><th>Type</th><th>Category</th><th>Amount</th><th>Note</th><th></th></tr></thead>
-              <tbody><!-- rows via app.js --></tbody>
+              <tbody><!-- rows injected --></tbody>
             </table>
           </div>
         </section>
 
-        <!-- ===================== SETTINGS ===================== -->
+        <!-- ============ SETTINGS ============ -->
         <section id="settings" style="display:none">
           <h2>Settings</h2>
 
-          <!-- Countries -->
+          <!-- Countries add/delete -->
           <div class="card">
             <div class="h">Countries</div>
             <div class="row">
               <input id="cty" class="input" placeholder="Add country"/>
               <button id="ctyAdd" class="btn">Add</button>
             </div>
-            <div id="ctyList" class="chips deletable"><!-- chips via app.js --></div>
+            <div id="ctyList" class="chips deletable"></div>
           </div>
 
           <!-- Edit Product Info -->
@@ -345,16 +312,15 @@
             <div class="row">
               <button id="ssSave" class="btn">Save current system data</button>
             </div>
-            <div id="ssList" class="list"><!-- snapshot rows with Push/Delete via app.js --></div>
+            <div id="ssList" class="list"><!-- snapshot rows with Push/Delete --></div>
           </div>
         </section>
 
-      </div><!-- /.container -->
-    </div><!-- /#main -->
-  </div><!-- /#app -->
+      </div><!-- /container -->
+    </div><!-- /main -->
+  </div><!-- /app -->
 
-  <!-- Keep the script tag LAST so the DOM is ready for app.js to bind -->
+  <!-- shared app script -->
   <script src="/public/app.js"></script>
-  <script src="/public/snapshot.js"></script>
 </body>
 </html>
